--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DynamicBoundspODEsIneq = "8922cf73-a24a-4c59-b2b7-455e840875f0"
 DocStringExtensions = "~0.8"
 DynamicBoundsBase = "0.1.0"
 DynamicBoundspODEsIneq = "0.1"
+julia = "~1.2, ~1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
