--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: julia
-#codecov: true
-coveralls: true
 
 os:
   - linux
-  - osx
-  - windows
+#  - osx
+#  - windows
 
 julia:
   - 1.2
-  - 1.3
-  - 1.4
+#  - 1.3
+#  - 1.4
   - 1.5
   - nightly
 
