--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,7 @@ DynamicBoundspODEsIneq = "8922cf73-a24a-4c59-b2b7-455e840875f0"
 
 [compat]
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "~0.3"
+DynamicBoundsBase = "0.3.2"
 DynamicBoundspODEsIneq = "~0.3"
 julia = "~1.2, ~1.3, ~1.4, ~1.5"
 
