Project.toml compt update

--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,7 @@ DynamicBoundspODEsIneq = "8922cf73-a24a-4c59-b2b7-455e840875f0"
 
 [compat]
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "~0.4"
+DynamicBoundsBase = "~0.4, ~0.5"
 DynamicBoundspODEsIneq = "~0.4"
 julia = "~1"
 
