--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,8 @@ DynamicBoundspODEsIneq = "8922cf73-a24a-4c59-b2b7-455e840875f0"
 [compat]
 DocStringExtensions = "~0.8"
 DynamicBoundsBase = "0.5.3"
-DynamicBoundspODEsIneq = "~0.4"
-julia = "~1.2, ~1.3, ~1.4, ~1.5"
+DynamicBoundspODEsIneq = "~0.5"
+julia = "~1.2, ~1.3, ~1.4, ~1.5, ~1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
