--- a/Project.toml
+++ b/Project.toml
@@ -7,12 +7,14 @@ version = "0.1.0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DynamicBoundsBase = "890bb398-7f8e-4565-ac8e-279ab2833f68"
 DynamicBoundspODEsIneq = "8922cf73-a24a-4c59-b2b7-455e840875f0"
+DynamicBoundspODEsDiscrete = "1c7daff2-9b32-4762-838b-ee2b1e32ee26"
 
 [compat]
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "0.5.3"
-DynamicBoundspODEsIneq = "~0.5"
-julia = "~1.2, ~1.3, ~1.4, ~1.5, ~1.6"
+DynamicBoundsBase = "0.5.4"
+DynamicBoundspODEsIneq = "~0.5.1"
+DynamicBoundspODEsDiscrete = "~0.1"
+julia = "~1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
